--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,7 +2,7 @@ trigger:
 - main
 
 pool:
-  name: COMP367-DevOps Agent   # Use your self-hosted agent pool name
+  name: COMP367-DevOps Agent 
 
 variables:
   solution: '**/*.sln'
